# astdot

./: LICENSE  Makefile  README.md  app.html  astdot.py  index.html  pyproject.toml  sandbox.ipynb
.streamlit/: config.toml
src/: app.py  astdot.py  templates.py
static/images/icon/: about.txt
tests/: test.py
